2014-10-03 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/cinc2h.pl: Updated to the gputils-1.4.0 .

2014-09-29 Ben Shi <powerstudio1st AT 163.com>
	* device/lib/stm8/_mullong_stm8.s:
	* device/lib/stm8/Makefile.in:
	  stm8 optimized version of _mullong.
	* src/stm8/peeph.def:
	  add new rules to utilize the above optimized functions.

2014-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-gbz80.def:
	  Removed or simplification peepholes.

2014-09-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Remove negation by inverting jump condition.
	* src/SDCCcse.c:
	  Remove cast at conditional jump.
	* device/include/ctype.h:
	  Simplify classification functions.

2014-09-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.c (mergeSpec): added check for both static and extern
	  (checkFunction): merge static or extern and check
	* device/include/ctype.h: replaced macros with direct inline versions
	* device/lib/isdigit.c,
	* device/lib/islower.c,
	* device/lib/isupper.c: replaced definitions with extern declaration to give
	  inline versions external linkage

2014-09-22 Ben Shi <powerstudio1st AT 163.com>

	* device/lib/stm8/_modsint_stm8.s:
	* device/lib/stm8/Makefile.in:
	  stm8 optimized version of _modsint.
	* src/stm8/peeph.def:
	  add new rules to utilize the above optimized functions.

2014-09-19 Ben Shi <powerstudio1st AT 163.com>

	* device/lib/stm8/_divsint_stm8.s:
	* device/lib/stm8/_mulint_stm8.s:
	* device/lib/stm8/Makefile.in:
	  stm8 optimized version of div / mul.
	* src/stm8/peeph.def:
	  add new rules to utilize the above optimized functions.

2014-09-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed double read from __sfr function parameter.

2014-09-17 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/pic14-header-parser.pl:
	  Creates two new groups: "regular", "enhanced"

	* support/scripts/pic16fam-h-gen.pl:
	  Divides into more groups the 14-bit processors: